# deep-lob-forecasting

./: .gitignore  DATA.md  IMPLEMENTATION_LOGIC.md  LICENSE  LLM_PROMPTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: train.yaml
scripts/: run_fi2010.py
shared/: RIGOR.md  __init__.py  validation.py
src/: train.py
src/backtest/: trade_eval.py
src/data/: fi2010.py
src/eval/: strata.py
src/models/: deeplob.py  tlob.py
tests/: test_deeplob.py  test_fi2010.py  test_strata.py  test_tlob.py  test_trade_eval.py  test_train.py
